macrostructure: header and first section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
@@ -10,30 +11,73 @@
 
     <header>
 
+      <div class="menu">
+
       <!-- PRIMA NAV-BAR LOGIN/  -->
 
       <nav>
 
       </nav>
-
+      <div class="hor-rul">
+        <hr>
+      </div>
       <nav>
 
       </nav>
 
+    </div>
+
+    <div class="jumbotron">
+
+    </div>
+
+    <div class="separèe">
+
+    </div>
+    <hr>
+
     </header>
-
-
-
 
     <!-- ++MAIN++ -->
 
     <main>
 
+      <div class="eyecatch">
+
+      </div>
+
       <section>
 
         <div class="row">
 
+          <div class="cell-first-row">
+
+          </div>
+
+          <div class="cell-first-row">
+
+          </div>
+
         </div>
+
+        <hr>
+
+        <div class="row">
+
+          <div class="cell-second-row">
+
+          </div>
+
+          <div class="cell-second-row">
+
+          </div>
+
+          <div class="cell-second-row">
+
+          </div>
+
+        </div>
+
 
       </section>
 
