macrostructure: second section /w grid

--- a/index.html
+++ b/index.html
@@ -13,23 +13,31 @@
 
       <div class="menu">
 
-      <!-- PRIMA NAV-BAR LOGIN/  -->
+      <!-- PRIMA NAV-BAR LOGIN/BARRA DI RICERCA  -->
 
       <nav>
 
       </nav>
+
       <div class="hor-rul">
         <hr>
       </div>
+
+      <!-- SECONDA NAV BAR MENU-->
+
       <nav>
 
       </nav>
 
     </div>
+
+    <!-- JUMBOTRON -->
 
     <div class="jumbotron">
 
     </div>
+
+    <!-- BLOCCO SEPARATORE HEADER/MAIN -->
 
     <div class="separèe">
 
@@ -46,6 +54,8 @@
 
       </div>
 
+      <!-- PRIMA ROW 'FREE HUBSPOT CRM' -->
+
       <section>
 
         <div class="row">
@@ -61,6 +71,8 @@
         </div>
 
         <hr>
+
+        <!-- SECONDA ROW 'FEATURES' -->
 
         <div class="row">
 
@@ -80,11 +92,50 @@
 
 
       </section>
-
-      <section>
+      <hr>
+      <section class="info-grid">
 
         <div class="row">
 
+          <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
+
+
+            <div id="container-info-grid">
+
+              <div class="cell-third-row">
+
+              </div>
+
+              <div class="cell-third-row">
+
+              </div>
+
+              <div class="cell-third-row">
+
+              </div>
+
+              <div class="cell-third-row">
+
+              </div>
+
+              <div class="cell-third-row">
+
+              </div>
+
+              <div class="cell-third-row">
+
+              </div>
+
+              <div class="cell-third-row">
+
+              </div>
+
+              <div class="cell-third-row">
+
+              </div>
+          </div>
         </div>
 
       </section>
