header: menu /w double nav bar
menu that will be position: fixed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -16,7 +17,17 @@
       <!-- PRIMA NAV-BAR LOGIN/BARRA DI RICERCA  -->
 
       <nav>
-
+        <div class="row">
+          <div class="nav-cell">
+            <a href="#"><i class="fas fa-globe-europe"></i>English (US)▾</a>
+            <a href="#">Contact Us</a>
+          </div>
+          <div class="nav-cell">
+            <a href="#"><i class="fas fa-search"></i></a>
+            <button type="button" name="button"class="login">Log In</button>
+            <button type="button" name="button"class="cta top-button">Get Hubspot Free</button>
+          </div>
+        </div>
       </nav>
 
       <div class="hor-rul">
@@ -26,7 +37,21 @@
       <!-- SECONDA NAV BAR MENU-->
 
       <nav>
+        <div class="row">
+          <div class="nav-cell">
+            <a href="#"> <img src="img/logo.svg" alt="hubspot logo"> </a>
 
+          </div>
+          <div class="nav-cell">
+            <ul>
+              <li><a href="#">Software ▾ </a></li>
+              <li><a href="#">Pricing  </a></li>
+              <li><a href="#">Resources ▾</a></li>
+              <li><a href="#">Partners ▾</a></li>
+              <li><a href="#">About ▾</a></li>
+            </ul>
+          </div>
+        </div>
       </nav>
 
     </div>
