--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
     <!-- JUMBOTRON -->
 
     <div class="jumbotron">
-
+      <div>
+        <h1>There's a better way to grow</h1>
+        <p>Marketing, sales and service that helps business grow without compromise. Because "good for the business" should also mean "good for the customer"</p>
+        <button type="button" name="button" class="cta">GetHubspotFree</button>
+        <p>Get started with FREE tools, and upgrade as you grow</p>
+      </div>
     </div>
     <hr>
     <!-- BLOCCO SEPARATORE HEADER/MAIN -->
