main: eyecatch + first section  (row 1/2)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HubSpot</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -81,21 +81,34 @@
     <main>
 
       <div class="eyecatch">
-
+        <img src="img/cube.png" alt="immagine cubo stilizzato">
+        <h2>Powerful Alone. Better Together</h2>
+        <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
       </div>
 
       <!-- PRIMA ROW 'FREE HUBSPOT CRM' -->
 
       <section>
 
-        <div class="row">
+        <div class="row box">
 
-          <div class="cell-first-row">
-
+          <div class="cell-first-row-left">
+            <img src="img/book.svg" alt="disegno stilizzato libro">
+            <div> <a href="#" class="button cta">Learn More</a> </div>
           </div>
 
-          <div class="cell-first-row">
-
+          <div class="cell-first-row-right">
+            <h3>Free Hubspot CRM</h3>
+            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+            <h4>POPULAR FEATURE</h4>
+            <div>
+              <hr>
+            </div>
+            <ul>
+              <li> <i class="fas fa-check-circle"></i> Contact Insight</li>
+              <li> <i class="fas fa-check-circle"></i> Deals</li>
+              <li> <i class="fas fa-check-circle"></i> Task</li>
+            </ul>
           </div>
 
         </div>
@@ -107,15 +120,15 @@
         <div class="row">
 
           <div class="cell-second-row">
-
+            <img src="img/marketing.svg" alt="">
           </div>
 
           <div class="cell-second-row">
-
+            <img src="img/sales.svg" alt="">
           </div>
 
           <div class="cell-second-row">
-
+            <img src="img/service.svg" alt="">
           </div>
 
         </div>
