--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           </div>
           <div class="nav-cell">
-            <ul>
+            <ul class="side-list">
               <li><a href="#">Software ▾ </a></li>
               <li><a href="#">Pricing  </a></li>
               <li><a href="#">Resources ▾</a></li>
@@ -104,7 +104,7 @@
             <div>
               <hr>
             </div>
-            <ul>
+            <ul class="side-list">
               <li> <i class="fas fa-check-circle"></i> Contact Insight</li>
               <li> <i class="fas fa-check-circle"></i> Deals</li>
               <li> <i class="fas fa-check-circle"></i> Task</li>
@@ -113,22 +113,49 @@
 
         </div>
 
-        <hr>
+
 
         <!-- SECONDA ROW 'FEATURES' -->
 
         <div class="row">
 
-          <div class="cell-second-row">
+          <div class="cell-second-row box">
             <img src="img/marketing.svg" alt="">
+            <h3>Marketing Hub</h3>
+            <p>Marketing software to help you grow traffic, convert more visitorns, and run complete inbound marketing campaigns at scale</p>
+            <div><hr></div>
+            <h4>POPULAR FEATURE</h4>
+            <ul>
+              <li><i class="fas fa-check-circle"></i> Lead Generation </li>
+              <li><i class="fas fa-check-circle"></i> Marketing Automation </li>
+              <li><i class="fas fa-check-circle"></i> Analytics </li>
+            </ul>
           </div>
 
-          <div class="cell-second-row">
+          <div class="cell-second-row box">
             <img src="img/sales.svg" alt="">
+            <h3>Sales Hub</h3>
+            <p>Time-saving sales software that helps you get deeper insight into prospects, automate the tasks you hate, and close more deals faster</p>
+            <div><hr></div>
+            <h4>POPULAR FEATURE</h4>
+            <ul>
+              <li><i class="fas fa-check-circle"></i> Email Tracking </li>
+              <li><i class="fas fa-check-circle"></i> Meeting </li>
+              <li><i class="fas fa-check-circle"></i> Email Automation </li>
+            </ul>
           </div>
 
-          <div class="cell-second-row">
+          <div class="cell-second-row box">
             <img src="img/service.svg" alt="">
+            <h3>Service Hub</h3>
+            <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business</p>
+            <div><hr></div>
+            <h4>POPULAR FEATURE</h4>
+            <ul>
+              <li><i class="fas fa-check-circle"></i> Tickets </li>
+              <li><i class="fas fa-check-circle"></i> Customer Feedback </li>
+              <li><i class="fas fa-check-circle"></i> Knowledge Base </li>
+            </ul>
           </div>
 
         </div>
