--- a/index.html
+++ b/index.html
@@ -162,50 +162,66 @@
 
 
       </section>
-      <hr>
+    <hr>
       <section class="info-grid">
+          <div class="row">
 
-        <div class="row">
+            <div>
+                <h2>Learn and grow with warad-winning support and a thriving community behing you.</h2>
+                <p class="subtitle">You don't have to go it alone. Master the inbound methodology an get the most oout of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+            </div>
 
-          <div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
 
+              <div id="container-info-grid">
 
-            <div id="container-info-grid">
+                <div class="cell-third-row b r">
+                  <img src="img/homepage_community_agency.svg" alt="logo partner">
+                    <h2>150+</h2>
+                    <p>HubSpot user groups</p>
+                </div>
 
-              <div class="cell-third-row">
+                <div class="cell-third-row b r">
+                  <img src="img/homepage_community_blog.svg" alt="logo blog">
+                    <h2>4.5M</h2>
+                    <p>monthly visits</p>
+                </div>
 
-              </div>
+                <div class="cell-third-row b r">
+                  <img src="img/homepage_community_academy.svg" alt="logo academy">
+                    <h2>155K+</h2>
+                    <p>certified professionals</p>
+                </div>
 
-              <div class="cell-third-row">
+                <div class="cell-third-row b">
+                  <img src="img/homepage_community_inbound.svg" alt="logo inbound">
+                    <h2>21K+</h2>
+                    <p>registered attendees</p>
+                </div>
 
-              </div>
+                <div class="cell-third-row t r">
+                  <img src="img/homepage_community_connect.svg" alt="logo connect">
+                    <h2>200+</h2>
+                    <p>integrations</p>
+                </div>
 
-              <div class="cell-third-row">
+                <div class="cell-third-row t r">
+                  <img src="img/homepage_community_globe.svg" alt="logo pianeta terra">
+                    <h2>6+</h2>
+                    <p>languages</p>
+                </div>
 
-              </div>
+                <div class="cell-third-row t r">
+                  <img src="img/homepage_community_followers.svg" alt="logo followers">
+                    <h2>2.6M+</h2>
+                    <p>social followers</p>
+                </div>
 
-              <div class="cell-third-row">
-
-              </div>
-
-              <div class="cell-third-row">
-
-              </div>
-
-              <div class="cell-third-row">
-
-              </div>
-
-              <div class="cell-third-row">
-
-              </div>
-
-              <div class="cell-third-row">
-
-              </div>
-          </div>
+                <div class="cell-third-row t">
+                  <img src="img/growthhub-white-small-1.svg" alt="logo growth">
+                    <h2>5K+</h2>
+                    <p>profiles and counting</p>
+                </div>
+            </div>
         </div>
 
       </section>
