main: third section
main completed

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="row">
 
             <div>
-                <h2>Learn and grow with warad-winning support and a thriving community behing you.</h2>
+                <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
                 <p class="subtitle">You don't have to go it alone. Master the inbound methodology an get the most oout of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
             </div>
 
@@ -230,11 +230,19 @@
 
         <div class="row">
 
-          <div class="cell-fourth-row">
-
+          <div class="cell-fourth-row-left">
+            <h2>64,500</h2>
+            <p>customers in over 100 countries growing their business with HubSpot</p>
           </div>
-          <div class="cell-fourth-row">
-
+          <div class="cell-fourth-row-right">
+            <img src="img/atlassian.png" alt="logo atlassian">
+            <img src="img/doordash.png" alt="logo doordash">
+            <img src="img/g2crowd.png" alt="logo g2crowd">
+            <img src="img/purple.png" alt="logo purple">
+            <img src="img/subaru.png" alt="logo subaru baracca">
+            <img src="img/wistia.png" alt="logo wistia">
+            <img src="img/classpass.png" alt="logo classpass">
+            <img src="img/vmware.png" alt="logo vmware">
           </div>
 
         </div>
@@ -242,10 +250,15 @@
         <div class="row">
           <!-- in fase di coding possibile aggregazione cell-fourth e cell-fifth -->
           <div class="cell-fifth-row">
-
+            <div class="">
+              <h2> Start Growing with HubSpot Today</h2>
+              <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier</p>
+              <a class="button cta" href="#">GetHubSpotFree</a>
+              <p>Get Started with FREE tools, or get more with our premium software</p>
+            </div>
           </div>
           <div class="cell-fifth-row">
-
+            <img src="img/woman.webp" alt="foto di donna che ride delle nostre disgrazie">
           </div>
 
         </div>
