--- a/index.html
+++ b/index.html
@@ -273,20 +273,52 @@
     <footer>
       <div class="row">
         <div class="contacts-cell">
+          <ul>
+            <li> <a href="#"></a> Increase Your Traffic </li>
+            <li> <a href="#"></a> Ad Software</li>
+            <li> <a href="#"></a> Blog Software</li>
+            <li> <a href="#"></a> SEO Software</li>
+            <li> <a href="#"></a> Social Media Software</li>
+            <li> <a href="#"></a> Content Management System</li>
 
+          </ul>
         </div>
         <div class="contacts-cell">
+          <ul>
+            <li> <a href="#"> Connect With Leads </a></li>
+            <li> <a href="#"> Find New Prospects </a></li>
+            <li> <a href="#"> Email Tracking</a></li>
+            <li> <a href="#"> Sales Email Templates</a></li>
+            <li> <a href="#"> Click to Call Your Leads</a></li>
+            <li> <a href="#"> Email Marketing</a></li>
 
+          </ul>
         </div>
         <div class="contacts-cell">
+          <ul>
+            <li> <a href="#"> Close and Manage Leads </a></li>
+            <li> <a href="#"> Document Tracking Tool</a></li>
+            <li> <a href="#"> Meeting Schedule Tool</a></li>
+            <li> <a href="#"> Sales Automation Tool</a></li>
+            <li> <a href="#"> Lead Management Tool</a></li>
+            <li> <a href="#"> Pipeline Management Tool</a></li>
 
+          </ul>
         </div>
         <div class="contacts-cell">
-
+          <ul>
+            <li> <a href="#"> Support and Tools </a></li>
+            <li> <a href="#"> HubSpot Partners</a></li>
+            <li> <a href="#"> Join a Local User Group</a></li>
+            <li> <a href="#"> Get a Free Website Report</a></li>
+            <li> <a href="#"> HubSpot Templates</a></li>
+            <li> <a href="#"> Free Tools & Generators</a></li>
+            <li> <a class="button grey" href="#">Contact HubSpot Support</a> </li>
+            <li> </li>
+          </ul>
         </div>
       </div>
       <div class="">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </footer>
   </body>
