footer: completed + menu (position: fixed)

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 
     </div>
 
+    <div class="blank">
+
+    </div>
+
     <!-- JUMBOTRON -->
 
     <div class="jumbotron">
@@ -314,11 +318,32 @@
             <li> <a href="#"> HubSpot Templates</a></li>
             <li> <a href="#"> Free Tools & Generators</a></li>
             <li> <a class="button grey" href="#">Contact HubSpot Support</a> </li>
-            <li> </li>
+            <li>
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-youtube"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin-in"></i>
+            </li>
           </ul>
         </div>
       </div>
-      <div class="">
+      <div class="lang-menu">
+        <ul>
+          <li> <a href="#">English</a> </li>
+          <li> <a href="#">Deutch</a> </li>
+          <li> <a href="#">日本語</a> </li>
+          <li> <a href="#">Espanol</a> </li>
+          <li> <a href="#">Portogues</a> </li>
+          <li> <a href="#">Francais</a> </li>
+        </ul>
+      </div>
+      <div id="logo-footer">
+        <img src="img/logo_gray.svg" alt="logo grigio hubspot">
+        <p>Copyright @ 2019 HubSpot, Inc</p>
+      </div>
+      <div id="legal-stuff">
+        <span> <a href="#">Legal Stuff</a>      <a href="#">Privacy Policy</a> </span>
       </div>
     </footer>
   </body>
