--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           </div>
           <div class="nav-cell">
             <a href="#"><i class="fas fa-search"></i></a>
-            <button type="button" name="button"class="login">Log In</button>
-            <button type="button" name="button"class="cta top-button">Get Hubspot Free</button>
+            <a href="#" class="button login">Log In</a>
+            <a href="#" class="button cta">Get Hubspot Free</a>
           </div>
         </div>
       </nav>
@@ -66,7 +66,7 @@
       <div>
         <h1>There's a better way to grow</h1>
         <p>Marketing, sales and service that helps business grow without compromise. Because "good for the business" should also mean "good for the customer"</p>
-        <button type="button" name="button" class="cta">GetHubspotFree</button>
+        <a href="#" class="button cta">GetHubspotFree</a>
         <p>Get started with FREE tools, and upgrade as you grow</p>
       </div>
     </div>
