font change + fixed some of the aesthethic issues

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
               <li><i class="fas fa-check-circle"></i> Marketing Automation </li>
               <li><i class="fas fa-check-circle"></i> Analytics </li>
             </ul>
+            <a href="#" class="button cta">Learn More</a>
           </div>
 
           <div class="cell-second-row box">
@@ -147,6 +148,7 @@
               <li><i class="fas fa-check-circle"></i> Meeting </li>
               <li><i class="fas fa-check-circle"></i> Email Automation </li>
             </ul>
+            <a href="#" class="button cta">Learn More</a>
           </div>
 
           <div class="cell-second-row box">
@@ -160,6 +162,7 @@
               <li><i class="fas fa-check-circle"></i> Customer Feedback </li>
               <li><i class="fas fa-check-circle"></i> Knowledge Base </li>
             </ul>
+            <a href="#" class="button cta">Learn More</a>
           </div>
 
         </div>
