fixed font-sizes , info-grid , some minor aesthetic issues

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
       <nav>
         <div class="row">
-          <div class="nav-cell">
-            <a href="#"><i class="fas fa-globe-europe"></i>English (US)▾</a>
+          <div class="nav-cell left-border">
+            <a href="#"> <i class="fas fa-globe-europe"></i>English (US) <i class="fas fa-chevron-down"></i> </a>
             <a href="#">Contact Us</a>
           </div>
           <div class="nav-cell">
@@ -44,11 +44,11 @@
           </div>
           <div class="nav-cell">
             <ul class="side-list">
-              <li><a href="#">Software ▾ </a></li>
+              <li><a href="#">Software <i class="fas fa-chevron-down"></i> </a></li>
               <li><a href="#">Pricing  </a></li>
-              <li><a href="#">Resources ▾</a></li>
-              <li><a href="#">Partners ▾</a></li>
-              <li><a href="#">About ▾</a></li>
+              <li><a href="#">Resources <i class="fas fa-chevron-down"></i></a></li>
+              <li><a href="#">Partners <i class="fas fa-chevron-down"></i></a></li>
+              <li><a href="#">About <i class="fas fa-chevron-down"></i></a></li>
             </ul>
           </div>
         </div>
@@ -169,17 +169,19 @@
 
 
       </section>
-    <hr>
       <section class="info-grid">
-          <div class="row">
+
 
             <div>
+              <div class="titles">
+
                 <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
                 <p class="subtitle">You don't have to go it alone. Master the inbound methodology an get the most oout of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
-            </div>
+
+              </div>
 
 
-              <div id="container-info-grid">
+              <div class="row">
 
                 <div class="cell-third-row b r">
                   <img src="img/homepage_community_agency.svg" alt="logo partner">
@@ -255,7 +257,6 @@
         </div>
 
         <div class="row">
-          <!-- in fase di coding possibile aggregazione cell-fourth e cell-fifth -->
           <div class="cell-fifth-row">
             <div class="">
               <h2> Start Growing with HubSpot Today</h2>
@@ -322,11 +323,11 @@
             <li> <a href="#"> Free Tools & Generators</a></li>
             <li> <a class="button grey" href="#">Contact HubSpot Support</a> </li>
             <li>
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-youtube"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-youtube"></i> 
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
             </li>
           </ul>
         </div>
@@ -342,12 +343,13 @@
         </ul>
       </div>
       <div id="logo-footer">
-        <img src="img/logo_gray.svg" alt="logo grigio hubspot">
+        <a href="#"> <img src="img/logo_gray.svg" alt="logo grigio hubspot"> </a>
         <p>Copyright @ 2019 HubSpot, Inc</p>
       </div>
       <div id="legal-stuff">
         <span> <a href="#">Legal Stuff</a>      <a href="#">Privacy Policy</a> </span>
       </div>
+
     </footer>
   </body>
 </html>
